# osecpu-basic

./: LICENSE-JP  README.md  autogen.sh  configure.ac
samples/: add2.bas  add3.bas  and.bas  attach.bas  attach_for.bas  attach_mat.bas  attach_mat2.bas  attach_mat3.bas  comparison.bas  comparison2.bas  declend.bas  def.bas  div.bas  fact.bas  fact.nb  fill.bas  fill.nb  fizzbuzz.nb  for.bas  for2.bas  gosub.bas  gosub2.bas  gosub3.bas  goto.bas  goto2.bas  goto3.bas  if.bas  if2.bas  if3.bas  label.bas  let.bas  let2.bas  let3.bas  let4.bas  mat.bas  mat2.bas  mat3.bas  mat4.bas  mat5.bas  mod.bas  (+114 more)
src/: Makefile.am  main.c  math.bas  math.nb  matrix.bas  matrix.nb  onbc.acm.c  onbc.acm.h  onbc.bison.y  onbc.callstack.c  onbc.callstack.h  onbc.cast.c  onbc.cast.h  onbc.double.c  onbc.double.h  onbc.ec.c  onbc.ec.h  onbc.eoe.c  onbc.eoe.h  onbc.flex.l  onbc.float.c  onbc.float.h  onbc.func.c  onbc.func.h  onbc.iden.c  onbc.iden.h  onbc.int.c  onbc.int.h  onbc.label.c  onbc.label.h  onbc.mem.c  onbc.mem.h  onbc.print.c  onbc.print.h  onbc.ptr.c  onbc.ptr.h  onbc.sint.c  onbc.sint.h  onbc.stack.c  onbc.stack.h  (+19 more)
